# packages/trilium-core/src/routes/api/search.ts
@@ -110,8 +110,8 @@ function getSearchResultDetails(req: Request<{ noteId: string }>): SearchResultD
     };
 }
 
-function quickSearch(req: Request<{ searchString: string }>) {
-    const { searchString } = req.params;
+function quickSearch(req: Request) {
+    const searchString = getSearchString(req);
 
     const searchContext = new SearchContext({
         fastSearch: false,
@@ -139,10 +139,10 @@ function quickSearch(req: Request<{ searchString: string }>) {
 }
 
 function search(
-    req: Request<{ searchString: string }, unknown, unknown,
+    req: Request<unknown, unknown, unknown,
         { ancestorNoteId?: string, includeTokens?: string }>
 ): string[] | SearchWithTokensResponse {
-    const { searchString } = req.params;
+    const searchString = getSearchString(req);
     const { ancestorNoteId, includeTokens } = req.query;
 
     const searchContext = new SearchContext({
@@ -167,6 +167,14 @@ function search(
         highlightedTokens: searchContext.getHighlightedTokenInfos(),
         error: searchContext.getError()
     };
+}
+
+function getSearchString(req: Request): string {
+    if (typeof req.query.searchString !== "string" || req.query.searchString.length === 0) {
+        throw new ValidationError("Search string must be a string.");
+    }
+
+    return req.query.searchString;
 }
 
 function getRelatedNotes(req: Request) {
